--- a/WeatherStation/WeatherStation/Base.lproj/Main.storyboard
+++ b/WeatherStation/WeatherStation/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" sectionHeaderHeight="66" sectionFooterHeight="66" translatesAutoresizingMaskIntoConstraints="NO" id="Mpc-zf-T0Q">
-                                <rect key="frame" x="114" y="160" width="730" height="820"/>
+                                <rect key="frame" x="114" y="246" width="730" height="734"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weatherstation_TABLE_VIEW_REUSE_ID_VC1" textLabel="TXk-c0-qtf" style="IBUITableViewCellStyleDefault" id="GOy-3d-Wee">
@@ -74,6 +74,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a state" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKM-Uv-MUz">
+                                <rect key="frame" x="114" y="160" width="216" height="46"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="seO-2N-b7k">
+                                <rect key="frame" x="360" y="160" width="484" height="46"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="Gxk-vc-PNa"/>
+                                </connections>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5j-5y-7c3">
                                 <rect key="frame" x="1076" y="246" width="365" height="46"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
@@ -83,24 +98,29 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="49j-u3-9tO" firstAttribute="leading" secondItem="seO-2N-b7k" secondAttribute="trailing" constant="232" id="1OI-mN-WTM"/>
+                            <constraint firstItem="seO-2N-b7k" firstAttribute="leading" secondItem="BKM-Uv-MUz" secondAttribute="trailing" constant="30" id="1Pc-w4-hnO"/>
                             <constraint firstItem="49j-u3-9tO" firstAttribute="width" secondItem="Mpc-zf-T0Q" secondAttribute="width" id="4Eg-vl-iL0"/>
                             <constraint firstItem="49j-u3-9tO" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="74H-zg-Tt6"/>
                             <constraint firstItem="W5j-5y-7c3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tsR-hK-woN" secondAttribute="leading" constant="20" symbolic="YES" id="7X3-CX-kkE"/>
                             <constraint firstItem="Mpc-zf-T0Q" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" multiplier="0.38" id="CLK-dq-VVT"/>
+                            <constraint firstItem="BKM-Uv-MUz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="EQ9-Dk-vpc"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="width" secondItem="NTf-Ab-wd6" secondAttribute="width" id="Eq6-bj-fAo"/>
                             <constraint firstItem="Mpc-zf-T0Q" firstAttribute="leading" secondItem="EDn-GT-5E5" secondAttribute="leading" constant="24" id="FKA-02-AuH"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="leading" secondItem="c6K-0Q-FyG" secondAttribute="trailing" id="IEc-J8-0uX"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="top" secondItem="NTf-Ab-wd6" secondAttribute="bottom" constant="40" id="Iyd-gz-M3j"/>
+                            <constraint firstItem="BKM-Uv-MUz" firstAttribute="leading" secondItem="EDn-GT-5E5" secondAttribute="leading" constant="24" id="LlO-ei-tcd"/>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Mpc-zf-T0Q" secondAttribute="bottom" constant="40" id="Nlw-dG-23Z"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tsR-hK-woN" secondAttribute="leading" constant="20" symbolic="YES" id="Pb9-6a-iMh"/>
                             <constraint firstItem="49j-u3-9tO" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Mpc-zf-T0Q" secondAttribute="trailing" constant="232" id="SaZ-ES-Qhm"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="width" secondItem="NTf-Ab-wd6" secondAttribute="width" id="Sjh-gz-PNJ"/>
                             <constraint firstItem="EDn-GT-5E5" firstAttribute="trailing" secondItem="49j-u3-9tO" secondAttribute="trailing" constant="24" id="cxN-Iy-Kzb"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="width" secondItem="vsj-7r-fu0" secondAttribute="width" id="dKh-YL-1yR"/>
+                            <constraint firstItem="Mpc-zf-T0Q" firstAttribute="top" secondItem="BKM-Uv-MUz" secondAttribute="bottom" constant="40" id="fMD-0v-8tK"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="top" secondItem="NTf-Ab-wd6" secondAttribute="bottom" constant="40" id="hP8-cf-ih4"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="leading" secondItem="W5j-5y-7c3" secondAttribute="trailing" id="ljm-GX-d57"/>
+                            <constraint firstItem="seO-2N-b7k" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="lvv-rA-0tK"/>
                             <constraint firstItem="EDn-GT-5E5" firstAttribute="trailing" secondItem="NTf-Ab-wd6" secondAttribute="trailing" constant="24" id="n8R-zV-YVp"/>
-                            <constraint firstItem="Mpc-zf-T0Q" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="poz-ig-Mdn"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="width" secondItem="49j-u3-9tO" secondAttribute="width" multiplier="0.5" id="rNe-gY-lxO"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="top" secondItem="49j-u3-9tO" secondAttribute="bottom" constant="40" id="vdg-Qu-yos"/>
                             <constraint firstItem="W5j-5y-7c3" firstAttribute="width" secondItem="NTf-Ab-wd6" secondAttribute="width" id="x41-8R-3mo"/>
@@ -115,6 +135,7 @@
                         <outlet property="labelTemp" destination="NTf-Ab-wd6" id="UAQ-Kb-JiR"/>
                         <outlet property="labelWeather" destination="vsj-7r-fu0" id="2TL-tF-aLE"/>
                         <outlet property="tableView" destination="Mpc-zf-T0Q" id="NiQ-qX-qEl"/>
+                        <outlet property="textFieldStateToSearch" destination="seO-2N-b7k" id="gga-YL-SNO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
