Adds network check to project

--- a/WeatherStation/WeatherStation/Base.lproj/Main.storyboard
+++ b/WeatherStation/WeatherStation/Base.lproj/Main.storyboard
@@ -101,25 +101,25 @@
                             <constraint firstItem="49j-u3-9tO" firstAttribute="leading" secondItem="seO-2N-b7k" secondAttribute="trailing" constant="232" id="1OI-mN-WTM"/>
                             <constraint firstItem="seO-2N-b7k" firstAttribute="leading" secondItem="BKM-Uv-MUz" secondAttribute="trailing" constant="30" id="1Pc-w4-hnO"/>
                             <constraint firstItem="49j-u3-9tO" firstAttribute="width" secondItem="Mpc-zf-T0Q" secondAttribute="width" id="4Eg-vl-iL0"/>
-                            <constraint firstItem="49j-u3-9tO" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="74H-zg-Tt6"/>
+                            <constraint firstItem="49j-u3-9tO" firstAttribute="top" secondItem="EDn-GT-5E5" secondAttribute="top" constant="100" id="74H-zg-Tt6"/>
                             <constraint firstItem="W5j-5y-7c3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tsR-hK-woN" secondAttribute="leading" constant="20" symbolic="YES" id="7X3-CX-kkE"/>
                             <constraint firstItem="Mpc-zf-T0Q" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" multiplier="0.38" id="CLK-dq-VVT"/>
-                            <constraint firstItem="BKM-Uv-MUz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="EQ9-Dk-vpc"/>
+                            <constraint firstItem="BKM-Uv-MUz" firstAttribute="top" secondItem="EDn-GT-5E5" secondAttribute="top" constant="100" id="EQ9-Dk-vpc"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="width" secondItem="NTf-Ab-wd6" secondAttribute="width" id="Eq6-bj-fAo"/>
                             <constraint firstItem="Mpc-zf-T0Q" firstAttribute="leading" secondItem="EDn-GT-5E5" secondAttribute="leading" constant="24" id="FKA-02-AuH"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="leading" secondItem="c6K-0Q-FyG" secondAttribute="trailing" id="IEc-J8-0uX"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="top" secondItem="NTf-Ab-wd6" secondAttribute="bottom" constant="40" id="Iyd-gz-M3j"/>
                             <constraint firstItem="BKM-Uv-MUz" firstAttribute="leading" secondItem="EDn-GT-5E5" secondAttribute="leading" constant="24" id="LlO-ei-tcd"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Mpc-zf-T0Q" secondAttribute="bottom" constant="40" id="Nlw-dG-23Z"/>
+                            <constraint firstItem="EDn-GT-5E5" firstAttribute="bottom" secondItem="Mpc-zf-T0Q" secondAttribute="bottom" constant="40" id="Nlw-dG-23Z"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tsR-hK-woN" secondAttribute="leading" constant="20" symbolic="YES" id="Pb9-6a-iMh"/>
                             <constraint firstItem="49j-u3-9tO" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Mpc-zf-T0Q" secondAttribute="trailing" constant="232" id="SaZ-ES-Qhm"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="width" secondItem="NTf-Ab-wd6" secondAttribute="width" id="Sjh-gz-PNJ"/>
+                            <constraint firstItem="seO-2N-b7k" firstAttribute="top" secondItem="EDn-GT-5E5" secondAttribute="top" constant="100" id="cCq-hm-gpq"/>
                             <constraint firstItem="EDn-GT-5E5" firstAttribute="trailing" secondItem="49j-u3-9tO" secondAttribute="trailing" constant="24" id="cxN-Iy-Kzb"/>
                             <constraint firstItem="c6K-0Q-FyG" firstAttribute="width" secondItem="vsj-7r-fu0" secondAttribute="width" id="dKh-YL-1yR"/>
                             <constraint firstItem="Mpc-zf-T0Q" firstAttribute="top" secondItem="BKM-Uv-MUz" secondAttribute="bottom" constant="40" id="fMD-0v-8tK"/>
                             <constraint firstItem="vsj-7r-fu0" firstAttribute="top" secondItem="NTf-Ab-wd6" secondAttribute="bottom" constant="40" id="hP8-cf-ih4"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="leading" secondItem="W5j-5y-7c3" secondAttribute="trailing" id="ljm-GX-d57"/>
-                            <constraint firstItem="seO-2N-b7k" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="100" id="lvv-rA-0tK"/>
                             <constraint firstItem="EDn-GT-5E5" firstAttribute="trailing" secondItem="NTf-Ab-wd6" secondAttribute="trailing" constant="24" id="n8R-zV-YVp"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="width" secondItem="49j-u3-9tO" secondAttribute="width" multiplier="0.5" id="rNe-gY-lxO"/>
                             <constraint firstItem="NTf-Ab-wd6" firstAttribute="top" secondItem="49j-u3-9tO" secondAttribute="bottom" constant="40" id="vdg-Qu-yos"/>
@@ -195,13 +195,15 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="MvC-e4-1nO" firstAttribute="leading" secondItem="Sg3-7m-QV7" secondAttribute="trailing" constant="239" id="3JH-gf-pls"/>
-                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="MvC-e4-1nO" secondAttribute="bottom" constant="24" id="7xB-MY-ye4"/>
+                            <constraint firstItem="MvC-e4-1nO" firstAttribute="leading" relation="lessThanOrEqual" secondItem="V0y-Qc-JxP" secondAttribute="trailing" constant="239" id="6zQ-JG-iAw"/>
+                            <constraint firstItem="Tzs-WY-Qt2" firstAttribute="bottom" secondItem="MvC-e4-1nO" secondAttribute="bottom" constant="24" id="7xB-MY-ye4"/>
                             <constraint firstItem="Sg3-7m-QV7" firstAttribute="leading" secondItem="Tzs-WY-Qt2" secondAttribute="leading" constant="24" id="C3R-UM-gl3"/>
-                            <constraint firstItem="Sg3-7m-QV7" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="228" id="DlF-ez-vRS"/>
+                            <constraint firstItem="Sg3-7m-QV7" firstAttribute="top" secondItem="Tzs-WY-Qt2" secondAttribute="top" constant="228" id="DlF-ez-vRS"/>
                             <constraint firstItem="oBM-Nl-JBx" firstAttribute="leading" secondItem="Tzs-WY-Qt2" secondAttribute="leading" constant="24" id="HBz-Vr-AAT"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oBM-Nl-JBx" secondAttribute="trailing" constant="20" symbolic="YES" id="Hrt-s5-mxi"/>
                             <constraint firstItem="oBM-Nl-JBx" firstAttribute="width" secondItem="Sg3-7m-QV7" secondAttribute="width" id="Jf8-3Y-xaM"/>
                             <constraint firstItem="oBM-Nl-JBx" firstAttribute="top" secondItem="Sg3-7m-QV7" secondAttribute="bottom" constant="8" id="Khx-z5-brr"/>
-                            <constraint firstItem="MvC-e4-1nO" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="100" id="fVN-89-l6a"/>
+                            <constraint firstItem="MvC-e4-1nO" firstAttribute="top" secondItem="Tzs-WY-Qt2" secondAttribute="top" constant="100" id="fVN-89-l6a"/>
                             <constraint firstItem="V0y-Qc-JxP" firstAttribute="width" secondItem="Sg3-7m-QV7" secondAttribute="width" id="ick-da-qug"/>
                             <constraint firstItem="V0y-Qc-JxP" firstAttribute="leading" secondItem="Tzs-WY-Qt2" secondAttribute="leading" constant="24" id="kDO-av-ujQ"/>
                             <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="oBM-Nl-JBx" secondAttribute="bottom" id="m2O-9s-TtI"/>
